--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
     <div class="hero-section text-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
             <div class="text-center">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">Summer Collection 2023</h1>
-                <p class="text-lg md:text-xl max-w-2xl mx-auto mb-8">Discover our premium selection of products with exclusive discounts and free shipping on all orders.</p>
+                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">SUFI MART COLLECTIONS</h1>
+                <p class="text-lg md:text-xl max-w-2xl mx-auto mb-8">Discover our premium selection of products with exclusive discounts.</p>
                 <div class="flex justify-center space-x-4">
                     <a href="#products" class="bg-white text-blue-600 px-8 py-3 rounded-md font-medium hover:bg-gray-100 transition duration-300">Shop Now</a>
                     <a href="#" class="border-2 border-white text-white px-8 py-3 rounded-md font-medium hover:bg-white hover:text-blue-600 transition duration-300">New Arrivals</a>
